Display @gmail.com at end of Email Fix reset password to accept no @gmail.com

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="notification_text">Someone on WhereYouAt Wants to know your location</string>
     <string name="transport_id" translatable="false">123</string>
     <string name="firebase_path" translatable="false">locations</string>
+    <string name="gmail">"@gmail.com"</string>
 </resources>
